syntax = "proto3";
package sultan;
// Common messages used across services
message BlockInfo {
    string chain = 1;
    uint64 height = 2;
    string hash = 3;
    string state_root = 4;
    int64 timestamp = 5;
}
message StateProof {
    uint64 block_height = 1;
    string state_root = 2;
    repeated bytes merkle_proof = 3;
    bytes signature = 4;
}
message CrossChainTransfer {
    string id = 1;
    string from_chain = 2;
    string to_chain = 3;
    string sender = 4;
    string recipient = 5;
    uint64 amount = 6;
    string token = 7;
    TransferStatus status = 8;
    StateProof proof = 9;
}
enum TransferStatus {
  Pending = 0;
  Verified = 1;
  Executed = 2;
  Failed = 3;
}
// Chain Service - common interface for all chain services
service ChainService {
    rpc GetBlockInfo(GetBlockInfoRequest) returns (GetBlockInfoResponse);
    rpc GetStateProof(GetStateProofRequest) returns (GetStateProofResponse);
    rpc SubscribeToBlocks(SubscribeRequest) returns (stream BlockInfo);
    rpc VerifyState(VerifyStateRequest) returns (VerifyStateResponse);
}
message GetBlockInfoRequest {
    uint64 height = 1;
}
message GetBlockInfoResponse {
    BlockInfo block = 1;
}
message GetStateProofRequest {
    uint64 block_height = 1;
}
message GetStateProofResponse {
    StateProof proof = 1;
}
message SubscribeRequest {
    uint64 from_block = 1;
}
message VerifyStateRequest {
    string chain = 1;
    StateProof proof = 2;
}
message VerifyStateResponse {
    bool verified = 1;
    string message = 2;
}
// Interoperability Service
service InteroperabilityService {
    rpc SubmitTransfer(SubmitTransferRequest) returns (SubmitTransferResponse);
    rpc GetTransferStatus(GetTransferStatusRequest) returns (GetTransferStatusResponse);
    rpc StreamTransfers(StreamTransfersRequest) returns (stream CrossChainTransfer);
}
message SubmitTransferRequest {
    CrossChainTransfer transfer = 1;
}
message SubmitTransferResponse {
    string transfer_id = 1;
    bool accepted = 2;
}
message GetTransferStatusRequest {
    string transfer_id = 1;
}
message GetTransferStatusResponse {
    CrossChainTransfer transfer = 1;
}
message StreamTransfersRequest {
    string chain_filter = 1;
}
// Event Service
service EventService {
    rpc PublishEvent(PublishEventRequest) returns (PublishEventResponse);
    rpc StreamEvents(StreamEventsRequest) returns (stream Event);
}
message Event {
    string id = 1;
    string chain = 2;
    EventType type = 3;
    uint64 block_height = 4;
    bytes data = 5;
    int64 timestamp = 6;
}
enum EventType {
  BlockProduced = 0;
  StateVerified = 1;
  TransferInitiated = 2;
  TransferCompleted = 3;
  ValidatorJoined = 4;
  ChainSynced = 5;
}
message PublishEventRequest {
    Event event = 1;
}
message PublishEventResponse {
    bool success = 1;
}
message StreamEventsRequest {
    string chain_filter = 1;
    EventType type_filter = 2;
} 
